fix white gap on footer menu mobile

--- a/css/main.css
+++ b/css/main.css
@@ -457,6 +457,8 @@ footer
 }
 footer .content
 {
+    background: #081e43;
+    
     position: relative;
 
     overflow: hidden;
